RESOLVED FIXED12954
XPath relative operations are implemented incorrectly
https://bugs.webkit.org/show_bug.cgi?id=12954
Summary XPath relative operations are implemented incorrectly
Alexey Proskuryakov
Reported 2007-03-03 07:08:26 PST
Patch forthcoming.
Attachments
proposed fix (145.86 KB, patch)
2007-03-03 07:17 PST, Alexey Proskuryakov
darin: review+
Alexey Proskuryakov
Comment 1 2007-03-03 07:17:40 PST
Created attachment 13464 [details] proposed fix Please note that the imported tests were rewritten, since they used to be in Python, and had hooks into internal 4XPath implementation.
Darin Adler
Comment 2 2007-03-04 22:26:47 PST
Comment on attachment 13464 [details] proposed fix r=me
Alexey Proskuryakov
Comment 3 2007-03-05 09:50:48 PST
Committed revision 19963.
Note You need to log in before you can comment on or make changes to this bug.