        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=12954
        XPath relative operations are implemented incorrectly

WebCore:
        * xml/XPathPredicate.cpp:
        (WebCore::XPath::NumericOp::doEvaluate):
        (WebCore::XPath::EqTestOp::compare):
        (WebCore::XPath::EqTestOp::doEvaluate):
        Reimplemented relative equality operations to match the spec.

        * xml/XPathPredicate.h:
        (WebCore::XPath::NumericOp::):
        (WebCore::XPath::EqTestOp::):
        Moved relative operations to EqTestOp.

        * xml/XPathGrammar.y:
        * xml/XPathParser.cpp:
        (WebCore::XPath::Parser::nextTokenInternal):
        (WebCore::XPath::Parser::lex):
        Adapted for the above changes.

LayoutTests:
        * fast/xpath/4XPath/Core/test_boolean_expr-expected.txt: Added.
        * fast/xpath/4XPath/Core/test_boolean_expr.html: Added.

        * fast/xpath/4XPath/Borrowed/cz_20030217-expected.txt: Added.
        * fast/xpath/4XPath/Borrowed/cz_20030217.html: Added.
        * fast/xpath/4XPath/Borrowed/kd_20010423-expected.txt: Added.
        * fast/xpath/4XPath/Borrowed/kd_20010423.html: Added.
        * fast/xpath/4XPath/Borrowed/od_20000608-expected.txt: Added.
        * fast/xpath/4XPath/Borrowed/od_20000608.html: Added.
        * fast/xpath/4XPath/Borrowed/resources/od_20000608.xml: Added.
        * fast/xpath/4XPath/Borrowed/rs_20010831-expected.txt: Added.
        * fast/xpath/4XPath/Borrowed/rs_20010831.html: Added.
        * fast/xpath/4XPath/Borrowed/sr_20021217-expected.txt: Added.
        * fast/xpath/4XPath/Borrowed/sr_20021217.html: Added.
        Added a bunch of XPath tests that already passed.

        * fast/xpath/4XPath/Borrowed/namespace-nodes-expected.txt: Added.
        * fast/xpath/4XPath/Borrowed/namespace-nodes.html: Added.
        * fast/xpath/namespace-nodes-expected.txt: Removed.
        * fast/xpath/namespace-nodes.html: Removed.
        Moved a previously imported 4XPath test.



Canonical link: https://commits.webkit.org/16786@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19963 268f45cc-cd09-0410-ab3c-d52691b4dbfc